// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PushCalled test 1`] = `
Array [
  Array [
    Array [
      "findSomething",
      "{\\"0\\":\\"_$$ND_FUNC$$_function (a) { }\\"}",
    ],
    Array [
      [Function],
    ],
    "TEST",
  ],
]
`;

exports[`PushCalled test 2`] = `
Array [
  Array [
    Array [
      "findSomethingAny",
      "{\\"0\\":\\"_$$ND_FUNC$$_function (a) { }\\",\\"1\\":\\"__MOCK__MATCH_ANY_THING\\"}",
    ],
    Array [
      [Function],
      "__MOCK__MATCH_ANY_THING",
    ],
    "TEST",
  ],
  Array [
    Array [
      "findSomething",
      "{\\"0\\":\\"_$$ND_FUNC$$_function (a) { }\\"}",
    ],
    Array [
      [Function],
    ],
    "TEST",
  ],
  Array [
    Array [
      "findSomething",
      "{\\"0\\":\\"_$$ND_FUNC$$_(a) => { }\\",\\"1\\":\\"_$$ND_FUNC$$_() => \\\\\\"x\\\\\\"\\"}",
    ],
    Array [
      [Function],
      [Function],
    ],
    "TEST_2",
  ],
]
`;
